【修改】STM32F072的协议文档 【新增】STM32F105的协议文档

--- a/STM32F072C8T6_IAP/通信协议.md
+++ b/STM32F072C8T6_IAP/通信协议.md
@@ -2,53 +2,42 @@
 
 STM32F072C8T6_M0_CAN_IAP：互联型芯片的FLASH_PAGE:2KB，FLASH:64KB，SRAM:16KB
 
-![image-20211022174446992](通信协议.assets/image-20211022174446992.png)
+![image-20211025092008870](通信协议.assets/image-20211025092008870.png)
 
 
 
 ### 2、升级传输方式
 
-创建1KB数组采用**分包缓存接收每帧数据**，根据不同的外设接口协议格式不一（RS485或CAN协议），每帧接收数据都会有回复成功与否，若接收不成功，继续重发这一帧，正确接收完一整包数据后进行CRC校验，校验成功后写入flash，校验不成功，继续重发这一包，依次分包接收后写入flash中。
+创建2KB+2大小的数组（以1 PAGE为单位）采用**分包缓存接收每帧数据**，在接收升级包满2KB时会进行CRC校验，校验失败回复失败，重新接收该page数据；反之回复成功，写入flash后继续接收下page数据，依次page接收后写入flash中、升级固件都写入完后等待跳转命令到APP区域。
 
-CAN协议：交互指令和bin文件数据传输都存储在数据帧的数据段中。
+CAN协议：交互指令和bin文件数据传输都存储在数据帧的数据段中（最大8Byte）。
 
 ![img](通信协议.assets/clip_image001.png)
 
 交互指令种类定义：
 
 ```
-CMD_LIST  CMD_List = 
+cmd_list_t cmd_list = 
 {
- .Erase = 0x00,   //擦除APP区域数据
-
- .WriteInfo = 0x01, //设置多字节写数据相关参数（写起始地址，数据量）
-
- .Write = 0x02,   //以多字节形式写数据
-
- .Check = 0x03,   //检测节点是否在线，同时返回固件信息
-
- .SetBaudRate = 0x04,//设置节点波特率
-
- .Excute = 0x05,   //执行固件
-
- .CmdSuccess = 0x08, //命令执行成功
-
- .CmdFaild = 0x09,  //命令执行失败
+	.write_info 	= 0x01,
+	.write_bin 		= 0x02,
+	.check_version 	= 0x03,
+	.set_baundrate 	= 0x04,
+	.excute 		= 0x05,
 };
 ```
 
-![CAN_IAP升级流程](通信协议.assets/clip_image003.png)
+![CAN_IAP（boot+app）](通信协议.assets/CAN_IAP（boot+app）.png)
 
 交互通信的过程： 每个程序都有自己的程序Version（2字节），高1字节为程序大版本号，低1字节为程序小版本号。
 
-1.【控制方 -> 接收方】发送查询版本指令：APP1或BOOT程序回复自身程序版本号给控制方比对有新版本固件后进行下一步指令。
+1.【server -> client】check version：APP或BOOT程序回复自身程序版本号给控制方比对有新版本固件后进行下一步指令。
 
-2.【控制方 -> 接收方】发送擦除flash指令：包含APP1程序起始地址和大小，擦除APP1所需扇区大小，擦除成功，回复指令执行成功；擦除失败，回复指令执行失败，重发该指令。
+2.【server -> client】write info：包含这包数据的偏移地址和大小，擦除整块APP区域。
 
-3.【控制方 -> 接收方】发送写入数据信息指令：包含这包数据的起始地址和大小。
+3.【server -> client】write bin：接收ID递增的CAN包，每接收到2K数据包+2Byte校验值，进行校验正确，回复指令执行成功，依次将APP程序完全写入到flash中；校验失败，回复指令执行失败，重发该指令。
 
-4.【控制方 -> 接收方】发送写入APP1程序指令：接收ID递增的CAN包，每接收到1K数据包+2Byte校验值，进行校验正确，回复指令执行成功，依次将APP1程序完全写入到flash中；校验失败，回复指令执行失败，重发该指令。
+4.【server -> client】jump firmware：发送跳转APP程序地址运行。 进入APP程序后接收到跳转指令会跳转到BOOT程序等待新固件升级步骤。
 
-5.【控制方 -> 接收方】发送执行跳转指令：APP1程序发送完毕并正确写入flash中，发送一个执行跳转指令，跳转APP1程序地址运行。 进入APP1程序后接收到跳转指令会跳转到BOOT程序等待新固件升级步骤。
+5.【server -> client】check version：升级软件成功后，查询新APP的软件版本号。
 
-6.【控制方 -> 接收方】发送查询版本指令：升级软件成功后，查询新APP1的软件版本号
